--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="search_button_font_size">16sp</dimen>
     <dimen name="search_button_corner_radius">4dp</dimen>
     <dimen name="search_button_padding">4dp</dimen>
+    <dimen name="spinner_width">120dp</dimen>
 
     <!-- activity_search_results.xml -->
     <dimen name="button_big_margin">32dp</dimen>
