--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/img_content_descr"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             android:src="@drawable/book" />
 
         <TextView
