--- a/app/src/main/res/drawable/frame_background.xml
+++ b/app/src/main/res/drawable/frame_background.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorFrameBackground" />
     <corners android:radius="@dimen/search_button_corner_radius" />
+    <gradient
+        android:centerColor="@color/colorFrameBackground2"
+        android:endColor="@color/colorFrameBackground3"
+        android:startColor="@color/colorFrameBackground1"
+        android:type="linear" />
 </shape>
