--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,17 +2,21 @@
 <resources>
     <color name="colorPrimary">#006064</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#00BCD4</color>
+    <color name="colorAccent">#0091EA</color>
 
-    <color name="colorText">#616161</color>
-    <color name="colorTextDarker">#212121</color>
+    <color name="colorText">@android:color/secondary_text_light</color>
+    <color name="colorTextHint">#616161</color>
+    <color name="colorTextHintDisabled">#90A4AE</color>
+    <color name="colorTextDarker">@android:color/primary_text_light</color>
 
     <color name="colorTitle">#00838F</color>
     <color name="colorStars">#00E5FF</color>
 
     <color name="colorButton">#006064</color>
 
-    <color name="colorFrameBackground">#E0F7FA</color>
-    <color name="colorSearchInstructions">#000000</color>
-    <color name="colorSearchTip">#006064</color>
+    <color name="colorFrameBackground1">#E1F5FE</color>
+    <color name="colorFrameBackground2">#B2EBF2</color>
+    <color name="colorFrameBackground3">#80DEEA</color>
+    <color name="colorSearchInstructions">@android:color/primary_text_light</color>
+    <color name="colorSearchTip">@android:color/secondary_text_light</color>
 </resources>
