--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/spinner_width"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/spinner_height"
+    android:gravity="center_vertical"
     android:paddingBottom="@dimen/frame_padding"
     android:paddingEnd="@dimen/frame_padding"
     android:paddingLeft="@dimen/frame_padding"
