--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#006064</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#0091EA</color>
+    <color name="colorAccent">#00838F</color>
 
     <color name="colorText">@android:color/secondary_text_light</color>
     <color name="colorTextHint">#616161</color>
@@ -18,5 +18,5 @@
     <color name="colorFrameBackground2">#B2EBF2</color>
     <color name="colorFrameBackground3">#80DEEA</color>
     <color name="colorSearchInstructions">@android:color/primary_text_light</color>
-    <color name="colorSearchTip">@android:color/secondary_text_light</color>
+    <color name="colorSearchTip">#006064</color>
 </resources>
